# Copyright 2024-2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "jni",
    tags = ["keep_dep"],
    visibility = ["//ink:__subpackages__"],
    deps = [
        ":affine_transform_jni",
        ":angle_jni",
        ":box_jni",
        ":intersection_jni",
        ":mesh_format_jni",
        ":mesh_jni",
        ":parallelogram_jni",
        ":partitioned_mesh_jni",
        ":triangle_jni",
        ":vec_jni",
    ],
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
    visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "cinterop",
    tags = ["keep_dep"],
    visibility = ["//ink:__subpackages__"],
    deps = [
        ":affine_transform_native",
        ":angle_native",
        ":box_native",
        ":intersection_native",
        ":mesh_format_native",
        ":mesh_native",
        ":parallelogram_native",
        ":partitioned_mesh_native",
        ":triangle_native",
        ":vec_native",
    ],
)

cc_library(
    name = "angle_jni",
    srcs = ["angle_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":angle_native",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "angle_native",
    srcs = ["angle_native.cc"],
    hdrs = ["angle_native.h"],
    deps = [
        "//ink/geometry:angle",
    ],
)

cc_library(
    name = "intersection_jni",
    srcs = ["intersection_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":intersection_native",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "intersection_native",
    srcs = ["intersection_native.cc"],
    hdrs = ["intersection_native.h"],
    deps = [
        ":partitioned_mesh_native_helper",
        "//ink/geometry:affine_transform",
        "//ink/geometry:angle",
        "//ink/geometry:intersects",
        "//ink/geometry:point",
        "//ink/geometry:quad",
        "//ink/geometry:rect",
        "//ink/geometry:segment",
        "//ink/geometry:triangle",
    ],
    alwayslink = 1,
)

cc_library(
    name = "partitioned_mesh_jni",
    srcs = ["partitioned_mesh_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":box_jni_helper",
        ":partitioned_mesh_native",
        ":partitioned_mesh_native_helper",
        ":vec_jni_helper",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "partitioned_mesh_native",
    srcs = ["partitioned_mesh_native.cc"],
    hdrs = ["partitioned_mesh_native.h"],
    deps = [
        ":mesh_format_native_helper",
        ":partitioned_mesh_native_helper",
        "//ink/geometry:affine_transform",
        "//ink/geometry:angle",
        "//ink/geometry:mesh",
        "//ink/geometry:mesh_format",
        "//ink/geometry:mesh_index_types",
        "//ink/geometry:partitioned_mesh",
        "//ink/geometry:point",
        "//ink/geometry:quad",
        "//ink/geometry:rect",
        "//ink/geometry:triangle",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
    alwayslink = 1,
)

cc_library(
    name = "mesh_jni",
    srcs = ["mesh_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":box_jni_helper",
        ":mesh_format_native_helper",
        ":mesh_native",
        ":mesh_native_helper",
        ":vec_jni_helper",
        "//ink/geometry:mesh",
        "//ink/geometry:point",
        "//ink/geometry:rect",
        "//ink/jni/internal:jni_defines",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/types:span",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "mesh_native",
    srcs = ["mesh_native.cc"],
    hdrs = ["mesh_native.h"],
    deps = [
        ":mesh_format_native_helper",
        ":mesh_native_helper",
        "//ink/geometry:mesh",
        "//ink/geometry:mesh_format",
        "//ink/geometry:mesh_packing_types",
        "//ink/geometry:point",
        "//ink/geometry:rect",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/types:span",
    ],
    alwayslink = 1,
)

cc_library(
    name = "mesh_native_helper",
    hdrs = ["mesh_native_helper.h"],
    deps = [
        "//ink/geometry:mesh",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "mesh_format_jni",
    srcs = ["mesh_format_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":mesh_format_native",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "mesh_format_native",
    srcs = ["mesh_format_native.cc"],
    hdrs = ["mesh_format_native.h"],
    deps = [
        ":mesh_format_native_helper",
        "//ink/geometry:mesh_format",
    ],
    alwayslink = 1,
)

cc_library(
    name = "mesh_format_native_helper",
    hdrs = ["mesh_format_native_helper.h"],
    deps = [
        "//ink/geometry:mesh_format",
        "@com_google_absl//absl/log:absl_check",
    ],
)

cc_library(
    name = "box_accumulator_jni_helper",
    srcs = ["box_accumulator_jni_helper.cc"],
    hdrs = ["box_accumulator_jni_helper.h"],
    visibility = ["//ink:__subpackages__"],
    deps = [
        "//ink/geometry:envelope",
        "//ink/geometry:rect",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_jvm_interface",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "box_jni",
    srcs = ["box_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":box_native",
        ":vec_jni_helper",
        "//ink/geometry:point",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "box_native",
    srcs = ["box_native.cc"],
    hdrs = ["box_native.h"],
    deps = [
        "//ink/geometry:point",
        "//ink/geometry:rect",
    ],
)

cc_library(
    name = "box_jni_helper",
    srcs = ["box_jni_helper.cc"],
    hdrs = ["box_jni_helper.h"],
    # Temporarily limited visibility while new APIs are being developed.
    visibility = ["//visibility:private"],
    deps = [
        ":mesh_native",
        ":parallelogram_native",
        ":partitioned_mesh_native",
        ":vec_jni_helper",
        "//ink/geometry:rect",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_jvm_interface",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "affine_transform_jni",
    srcs = ["affine_transform_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":affine_transform_native",
        ":parallelogram_jni_helper",
        "//ink/geometry:angle",
        "//ink/geometry:quad",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "affine_transform_native",
    srcs = ["affine_transform_native.cc"],
    hdrs = ["affine_transform_native.h"],
    deps = [
        "//ink/geometry:affine_transform",
        "//ink/geometry:angle",
        "//ink/geometry:quad",
    ],
    alwayslink = 1,
)

cc_library(
    name = "parallelogram_jni",
    srcs = ["parallelogram_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":box_jni_helper",
        ":parallelogram_native",
        ":vec_jni_helper",
        "//ink/geometry:point",
        "//ink/geometry:rect",
        "//ink/geometry:vec",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_jvm_interface",
        "@com_google_absl//absl/log",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "parallelogram_native",
    srcs = ["parallelogram_native.cc"],
    hdrs = ["parallelogram_native.h"],
    deps = [
        "//ink/geometry:angle",
        "//ink/geometry:envelope",
        "//ink/geometry:point",
        "//ink/geometry:quad",
        "//ink/geometry:rect",
        "//ink/geometry:vec",
    ],
)

cc_library(
    name = "parallelogram_jni_helper",
    srcs = ["parallelogram_jni_helper.cc"],
    hdrs = ["parallelogram_jni_helper.h"],
    deps = [
        ":affine_transform_native",
        ":parallelogram_native",
        ":vec_jni_helper",
        "//ink/geometry:point",
        "//ink/geometry:quad",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_jvm_interface",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "vec_jni",
    srcs = ["vec_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":vec_jni_helper",
        ":vec_native",
        "//ink/geometry:point",
        "//ink/geometry:vec",
        "//ink/jni/internal:jni_defines",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "vec_native",
    srcs = ["vec_native.cc"],
    hdrs = ["vec_native.h"],
    deps = [
        "//ink/geometry:angle",
        "//ink/geometry:vec",
    ],
)

cc_library(
    name = "vec_jni_helper",
    srcs = ["vec_jni_helper.cc"],
    hdrs = ["vec_jni_helper.h"],
    visibility = ["//ink:__subpackages__"],
    deps = [
        ":affine_transform_native",
        ":box_native",
        ":mesh_native",
        ":parallelogram_native",
        ":partitioned_mesh_native",
        ":vec_native",
        "//ink/geometry:point",
        "//ink/geometry:vec",
        "//ink/jni/internal:jni_jvm_interface",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "triangle_jni",
    srcs = ["triangle_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":triangle_native",
        "//ink/jni/internal:jni_defines",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "triangle_native",
    srcs = ["triangle_native.cc"],
    hdrs = ["triangle_native.h"],
    deps = [
        "//ink/geometry:point",
        "//ink/geometry:triangle",
    ],
)

cc_library(
    name = "partitioned_mesh_native_helper",
    hdrs = ["partitioned_mesh_native_helper.h"],
    deps = [
        "//ink/geometry:partitioned_mesh",
        "@com_google_absl//absl/log:absl_check",
    ],
)
