# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//ink:__subpackages__"],
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
)

cc_library(
    name = "cinterop",
    deps = [
        ":byte_vector_native",
        ":stroke_input_batch_serialization_native",
    ],
)

cc_library(
    name = "jni",
    tags = ["keep_dep"],
    visibility = ["//visibility:public"],
    deps = [
        ":brush_family_serialization_jni",
        ":byte_vector_jni",
        ":stroke_input_batch_serialization_jni",
    ],
)

cc_library(
    name = "byte_vector_jni",
    srcs = ["byte_vector_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":byte_vector_native",
        ":byte_vector_native_helper",
        "//ink/jni/internal:jni_defines",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "byte_vector_native",
    srcs = ["byte_vector_native.cc"],
    hdrs = ["byte_vector_native.h"],
    deps = [
        ":byte_vector_native_helper",
    ],
)

cc_library(
    name = "byte_vector_native_helper",
    hdrs = ["byte_vector_native_helper.h"],
)

cc_library(
    name = "stroke_input_batch_serialization_jni",
    srcs = ["stroke_input_batch_serialization_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":byte_vector_native_helper",
        ":stroke_input_batch_serialization_native",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_proto_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/storage/proto:stroke_input_batch_cc_proto",
        "@com_google_absl//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "stroke_input_batch_serialization_native",
    srcs = ["stroke_input_batch_serialization_native.cc"],
    hdrs = ["stroke_input_batch_serialization_native.h"],
    deps = [
        ":byte_vector_native_helper",
        "//ink/storage:stroke_input_batch",
        "//ink/storage/proto:stroke_input_batch_cc_proto",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal/jni:stroke_input_batch_native_helper",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "brush_family_serialization_jni",
    srcs = ["brush_family_serialization_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_family_serialization_jni_helper",
        "//ink/brush:brush_family",
        "//ink/brush:version",
        "//ink/brush/internal/jni:brush_native_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_proto_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/storage:brush",
        "//ink/storage/proto:brush_cc_proto",
        "//ink/storage/proto:brush_family_cc_proto",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_family_serialization_jni_helper",
    srcs = ["brush_family_serialization_jni_helper.cc"],
    hdrs = ["brush_family_serialization_jni_helper.h"],
    deps = [
        "//ink/brush:brush_family",
        "//ink/brush:version",
        "//ink/jni/internal:jni_string_util",
        "//ink/storage:brush",
        "//ink/storage/proto:brush_cc_proto",
        "//ink/storage/proto:brush_family_cc_proto",
        "@com_google_absl//absl/base:nullability",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)
