# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//ink:__subpackages__"],
)

filegroup(
    name = "cinterop_headers",
    srcs = glob(["*_native.h"]),
)

cc_library(
    name = "cinterop",
    deps = [
        ":brush_family_serialization_native",
        ":stroke_input_batch_serialization_native",
    ],
)

cc_library(
    name = "jni",
    tags = ["keep_dep"],
    visibility = ["//visibility:public"],
    deps = [
        ":brush_family_serialization_jni",
        ":stroke_input_batch_serialization_jni",
    ],
)

cc_library(
    name = "byte_array_native_helper",
    srcs = ["byte_array_native_helper.cc"],
    hdrs = ["byte_array_native_helper.h"],
    deps = [
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/log:absl_check",
        "@protobuf//:protobuf_lite",
    ],
)

cc_library(
    name = "stroke_input_batch_serialization_jni",
    srcs = ["stroke_input_batch_serialization_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":stroke_input_batch_serialization_native",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_proto_util",
        "//ink/jni/internal:status_jni_helper",
        "@abseil-cpp//absl/log:absl_check",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "stroke_input_batch_serialization_native",
    srcs = ["stroke_input_batch_serialization_native.cc"],
    hdrs = ["stroke_input_batch_serialization_native.h"],
    deps = [
        ":byte_array_native_helper",
        "//ink/storage:stroke_input_batch",
        "//ink/storage/proto:stroke_input_batch_cc_proto",
        "//ink/strokes/input:stroke_input_batch",
        "//ink/strokes/internal/jni:stroke_input_batch_native_helper",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "brush_family_serialization_jni",
    srcs = ["brush_family_serialization_jni.cc"],
    tags = ["keep_dep"],
    deps = [
        ":brush_family_serialization_jni_helper",
        ":brush_family_serialization_native",
        ":brush_family_serialization_native_helper",
        "//ink/brush:brush_family",
        "//ink/brush/internal/jni:brush_native_helper",
        "//ink/jni/internal:jni_defines",
        "//ink/jni/internal:jni_proto_util",
        "//ink/jni/internal:status_jni_helper",
        "//ink/storage:brush",
        "//ink/storage/proto:brush_cc_proto",
        "//ink/storage/proto:brush_family_cc_proto",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
    alwayslink = 1,
)

cc_library(
    name = "brush_family_serialization_native",
    srcs = ["brush_family_serialization_native.cc"],
    hdrs = ["brush_family_serialization_native.h"],
    deps = [
        ":brush_family_serialization_native_helper",
        ":byte_array_native_helper",
        "//ink/brush:brush_family",
        "//ink/brush/internal/jni:brush_native_helper",
        "//ink/storage:brush",
        "//ink/storage/proto:brush_cc_proto",
        "//ink/storage/proto:brush_family_cc_proto",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "brush_family_serialization_jni_helper",
    srcs = ["brush_family_serialization_jni_helper.cc"],
    hdrs = ["brush_family_serialization_jni_helper.h"],
    deps = [
        ":brush_family_serialization_native_helper",
        "//ink/brush:brush_family",
        "//ink/brush:version",
        "//ink/jni/internal:jni_string_util",
        "//ink/storage:brush",
        "//ink/storage/proto:brush_cc_proto",
        "//ink/storage/proto:brush_family_cc_proto",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
    ] + select({
        "@platforms//os:android": [],
        "//conditions:default": [
            "@rules_jni//jni",
        ],
    }),
)

cc_library(
    name = "brush_family_serialization_native_helper",
    srcs = ["brush_family_serialization_native_helper.cc"],
    hdrs = ["brush_family_serialization_native_helper.h"],
    deps = [
        "//ink/brush:brush_family",
        "//ink/storage:brush",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:string_view",
    ],
)
