# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//ink:__subpackages__"],
)

cc_library(
    name = "stroke_input_validation_helpers",
    srcs = ["stroke_input_validation_helpers.cc"],
    hdrs = ["stroke_input_validation_helpers.h"],
    deps = [
        "//ink/strokes/input:stroke_input",
        "//ink/types:duration",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_macros",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "stroke_input_validation_helpers_test",
    srcs = ["stroke_input_validation_helpers_test.cc"],
    deps = [
        ":stroke_input_validation_helpers",
        "//ink/geometry:angle",
        "//ink/strokes/input:stroke_input",
        "//ink/types:duration",
        "//ink/types:physical_distance",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest_main",
    ],
)
